<resources>
    <string name="app_name">Translate</string>
    <string name="enter_text">Enter Text</string>
    <string name="translate">Translate</string>
    <string name="source_language">Source Language</string>
    <string name="target_language">Target Language</string>
    <string name="google_translate_api">Google Translate API</string>
    <string name="copy_to_clipboard">Copy To Clipboard</string>
    <string name="copied_to_clipboard">Copied to clipboard</string>
    <string name="the_text_cannot_be_empty">The text cannot be empty.</string>
    <string name="translated">Translated</string>
</resources>